# eimgfs

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.linux  Makefile.win32  README.md  allocmap.h  eimgfs.cpp  tstallocmap.cpp
CompressUtils/: compress_msgs.h  lzxxpr_convert.h  rom34_convert.h  win32compress_link.h
cmake_find/: Finditslib.cmake  Findopenssl.cmake
dllloader/: dllloader.cpp  dllloader.h
itslib/include/: FileFunctions.h  debug.h  stringutils.h
itslib/include/util/: ReadWriter.h
itslib/include/util/rw/: ByteVectorReader.h  ByteVectorWriter.h  CheckedOffsetReader.h  FileReader.h  MemoryReader.h  MmapReader.h  RangeReader.h
itslib/src/: debug.cpp
